--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.i7sAdw6i.css"
+      href="/assets/static/app_generated_index-6937cd5a.EwDlZ_vC.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -29,10 +29,10 @@
   <body class="w-body w-body-1">
     <div class="w-box w-container">
       <div id="requirements" class="w-box w-requirements">
-        <div class="w-text w-text-1">Requirements</div>
+        <div class="w-text w-text-1">Plan</div>
         <div class="w-box w-box-1">
           <div class="w-box w-box-2">
-            <div class="w-text w-text-2">Content</div>
+            <div class="w-text w-text-2 ms-gradient">Content</div>
             <div class="w-box w-box-3">
               <button type="button" id="posts-sub" class="w-button w-button-1">
                 -
@@ -44,7 +44,7 @@
             </div>
           </div>
           <div class="w-box w-box-5">
-            <div class="w-text w-text-3">Ad Spend</div>
+            <div class="w-text w-text-3 ms-gradient">Ad Spend</div>
             <div class="w-box w-box-6">
               <button type="button" id="ads-sub" class="w-button w-button-3">
                 -
@@ -57,10 +57,8 @@
               </button>
             </div>
           </div>
-        </div>
-        <div class="w-box w-box-8">
-          <div class="w-box w-box-9">
-            <div class="w-html-embed">
+          <div class="w-box w-box-36">
+            <div class="w-html-embed w-html-embed-1">
               <div style="width: 300px; margin: auto; text-align: center">
                 <!-- Canvas for Gauge -->
                 <canvas id="gauge-canvas" width="300" height="150"></canvas>
@@ -79,50 +77,51 @@
             </div>
           </div>
         </div>
-        <div id="stage-4" class="w-box w-box-36">
-          <div id="offer-price-2" class="w-box w-box-35">$15000/m</div>
+        <div id="stage-4" class="w-box w-box-34">
+          <div id="total-price-2" class="w-box w-box-33">$15000/m</div>
+          <div id="offer-price-2" class="w-box w-box-37">$15000/m</div>
         </div>
       </div>
       <div id="pricing" class="w-box w-pricing">
-        <div class="w-text w-text-4">Pricing</div>
-        <div class="w-box w-box-10">
-          <div class="w-box w-box-11">
+        <div class="w-text w-text-4">Plan Breakdown</div>
+        <div class="w-box w-box-8">
+          <div class="w-box w-box-9">
             Social Media Managed End-End, on TikTok, X, YT Shorts, IG, FB
           </div>
-          <div id="d-1" class="w-box w-box-12">$2000/m</div>
+          <div id="d-1" class="w-box w-box-10">$2000/m</div>
         </div>
-        <div class="w-box w-box-13">
-          <div class="w-box w-box-14">
+        <div class="w-box w-box-11">
+          <div class="w-box w-box-12">
             Paid Advertising Managed End-End, All channels - Google, Meta,
             TikTok
           </div>
-          <div id="d-2" class="w-box w-box-15">$2000/m</div>
+          <div id="d-2" class="w-box w-box-13">$2000/m</div>
         </div>
-        <div class="w-box w-box-16">
-          <div class="w-box w-box-17">Influencer Marketing Managed End-End</div>
-          <div id="d-3" class="w-box w-box-18">$5000/m</div>
+        <div class="w-box w-box-14">
+          <div class="w-box w-box-15">Influencer Marketing Managed End-End</div>
+          <div id="d-3" class="w-box w-box-16">$5000/m</div>
         </div>
-        <div class="w-box w-box-19">
-          <div class="w-box w-box-20">
+        <div class="w-box w-box-17">
+          <div class="w-box w-box-18">
             Top 1% Global Marketing Talent - Graphic Designers, Video Editors,
             Writers, <br />Actors, Director, Camera man - available for your
             business
           </div>
-          <div id="d-4" class="w-box w-box-21">$15000/m</div>
+          <div id="d-4" class="w-box w-box-19">$15000/m</div>
         </div>
-        <div class="w-box w-box-22">
-          <div class="w-box w-box-23">
+        <div class="w-box w-box-20">
+          <div class="w-box w-box-21">
             Ability to close influencer deals through other influencers, saving
             you
           </div>
-          <div id="d-5" class="w-box w-box-24">$8000/m</div>
+          <div id="d-5" class="w-box w-box-22">$8000/m</div>
         </div>
-        <div class="w-box w-box-25">
-          <div class="w-box w-box-26">Access to All Influencers</div>
-          <div id="d-6" class="w-box w-box-27">$15000/m</div>
+        <div class="w-box w-box-23">
+          <div class="w-box w-box-24">Access to All Influencers</div>
+          <div id="d-6" class="w-box w-box-25">$15000/m</div>
         </div>
-        <div class="w-box w-box-28">
-          <div id="stage-2" class="w-box w-box-29">
+        <div class="w-box w-box-26">
+          <div id="stage-2" class="w-box w-box-27">
             <img
               alt=""
               width="20"
@@ -141,13 +140,15 @@
               >Guaranteed Growth in 30-days or</span
             ><span class="w-text w-text-6">you do not pay</span>
           </div>
-          <div class="w-box w-box-30">Total Price =</div>
-          <div id="total-price" class="w-box w-box-31">$15000/m</div>
+          <div class="w-box w-box-28">Total Price =</div>
+          <div id="total-price" class="w-box w-box-29 ms-gradient">
+            $15000/m
+          </div>
         </div>
         <hr class="w-separator w-separator-1" />
-        <div id="stage-3" class="w-box w-box-32">
-          <div class="w-box w-box-37">New Price =</div>
-          <div id="offer-price" class="w-box w-box-34">$15000/m</div>
+        <div id="stage-3" class="w-box w-box-30">
+          <div class="w-box w-box-35">New Price =</div>
+          <div id="offer-price" class="w-box w-box-32">$15000/m</div>
         </div>
       </div>
     </div>
@@ -156,19 +157,30 @@
         button {
           cursor: pointer;
         }
+
+        .ms-gradient {
+          background-image: linear-gradient(
+            to right,
+            #e38b3e,
+            #bc3f29
+          ) !important;
+          color: white !important;
+          font-weight: 900 !important;
+          font-size: 16px !important;
+        }
       </style>
     </div>
-    <div class="w-box w-box-33">
+    <div class="w-box w-box-31">
       <button
         type="button"
         id="reserve-spot-btn"
-        class="w-button w-reserve-spot-button"
+        class="w-button w-reserve-spot-button ms-gradient"
       >
         Reserve Spot</button
       ><button
         type="button"
         id="make-payment-btn"
-        class="w-button w-make-payment-button"
+        class="w-button w-make-payment-button ms-gradient"
       >
         Make Payment</button
       ><button
@@ -180,9 +192,9 @@
       ><button
         type="button"
         id="progression-btn"
-        class="w-button w-progression-button"
+        class="w-button w-progression-button ms-gradient"
       >
-        Continue
+        Next →
       </button>
     </div>
     <script id="vike_pageContext" type="application/json">
@@ -214,13 +226,13 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.BM72yeaF.js"
+      src="/assets/entries/entry-server-routing.BvzgEMuB.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_index.CQpFwcGG.js"
+      href="/assets/entries/pages_index.BH3jV3Gk.js"
       as="script"
       type="text/javascript"
     />
