designa nd funcational updates

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.EwDlZ_vC.css"
+      href="/assets/static/app_generated_index-6937cd5a.Bp7vy-e2.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -27,101 +27,166 @@
     </script>
   </head>
   <body class="w-body w-body-1">
+    <div class="w-box w-sidebar">
+      <img
+        alt=""
+        width="140"
+        height="67"
+        src="/assets/Msocial_logo-6_mGjuilr6f7QUT8WCzj1vT.png"
+        class="w-image w-logo"
+        sizes="100vw"
+        srcset="
+          /assets/Msocial_logo-6_mGjuilr6f7QUT8WCzj1vT.png  16w,
+          /assets/Msocial_logo-6_mGjuilr6f7QUT8WCzj1vT.png  32w,
+          /assets/Msocial_logo-6_mGjuilr6f7QUT8WCzj1vT.png  48w,
+          /assets/Msocial_logo-6_mGjuilr6f7QUT8WCzj1vT.png  64w,
+          /assets/Msocial_logo-6_mGjuilr6f7QUT8WCzj1vT.png  96w,
+          /assets/Msocial_logo-6_mGjuilr6f7QUT8WCzj1vT.png 128w,
+          /assets/Msocial_logo-6_mGjuilr6f7QUT8WCzj1vT.png 256w,
+          /assets/Msocial_logo-6_mGjuilr6f7QUT8WCzj1vT.png 384w
+        "
+        decoding="async"
+        loading="lazy"
+      />
+      <div class="w-box w-box-27 ms-gradient">
+        <img
+          alt=""
+          width="24"
+          height="24"
+          src="/assets/task-actions_7Uyj53b_j4NFTdq8OEkaB.png"
+          class="w-image w-icon"
+          sizes="100vw"
+          srcset="
+            /assets/task-actions_7Uyj53b_j4NFTdq8OEkaB.png 16w,
+            /assets/task-actions_7Uyj53b_j4NFTdq8OEkaB.png 32w,
+            /assets/task-actions_7Uyj53b_j4NFTdq8OEkaB.png 48w
+          "
+          decoding="async"
+          loading="lazy"
+        />
+        <div class="w-text w-text-4">Plan</div>
+      </div>
+    </div>
     <div class="w-box w-container">
       <div id="requirements" class="w-box w-requirements">
-        <div class="w-text w-text-1">Plan</div>
-        <div class="w-box w-box-1">
-          <div class="w-box w-box-2">
-            <div class="w-text w-text-2 ms-gradient">Content</div>
-            <div class="w-box w-box-3">
-              <button type="button" id="posts-sub" class="w-button w-button-1">
-                -
-              </button>
-              <div id="posts-content" class="w-box w-box-4">3 posts / week</div>
-              <button type="button" id="posts-add" class="w-button w-button-2">
-                +
-              </button>
-            </div>
-          </div>
-          <div class="w-box w-box-5">
-            <div class="w-text w-text-3 ms-gradient">Ad Spend</div>
-            <div class="w-box w-box-6">
-              <button type="button" id="ads-sub" class="w-button w-button-3">
-                -
-              </button>
-              <div id="ad-spend-content" class="w-box w-box-7">
-                $0-$1.5k / month
-              </div>
-              <button type="button" id="ads-add" class="w-button w-button-4">
-                +
-              </button>
-            </div>
-          </div>
-          <div class="w-box w-box-36">
-            <div class="w-html-embed w-html-embed-1">
-              <div style="width: 300px; margin: auto; text-align: center">
-                <!-- Canvas for Gauge -->
-                <canvas id="gauge-canvas" width="300" height="150"></canvas>
-                <!-- Label -->
-                <div
-                  id="gauge-label"
-                  style="
-                    font-size: 15px;
-                    margin-top: 0px;
-                    font-family: Verdana, Geneva, Tahoma, sans-serif;
-                  "
+        <div class="w-text w-text-9">Plan</div>
+        <div id="" class="w-box w-container-1">
+          <div class="w-box w-box-30">
+            <div class="w-box w-box-31">
+              <div class="w-text w-text-7 ms-gradient">Content</div>
+              <div class="w-box w-box-32">
+                <button
+                  type="button"
+                  id="posts-sub"
+                  class="w-button w-button-1"
                 >
-                  Moderate Growth
+                  -
+                </button>
+                <div id="posts-content" class="w-box w-box-33">
+                  1 post every 2 days, 1 video a week
+                </div>
+                <button
+                  type="button"
+                  id="posts-add"
+                  class="w-button w-button-2"
+                >
+                  +
+                </button>
+              </div>
+            </div>
+            <div class="w-box w-box-34">
+              <div class="w-text w-text-8 ms-gradient">Ad Spend</div>
+              <div class="w-box w-box-35">
+                <button type="button" id="ads-sub" class="w-button w-button-3">
+                  -
+                </button>
+                <div id="ad-spend-content" class="w-box w-box-36">
+                  $0 - $1.5k / month
+                </div>
+                <button type="button" id="ads-add" class="w-button w-button-4">
+                  +
+                </button>
+              </div>
+            </div>
+            <div class="w-box w-box-37">
+              <div class="w-html-embed w-html-embed-1">
+                <div style="width: 300px; margin: auto; text-align: center">
+                  <!-- Canvas for Gauge -->
+                  <canvas id="gauge-canvas" width="300" height="150"></canvas>
+                  <!-- Label -->
+                  <div
+                    id="gauge-label"
+                    style="
+                      font-size: 15px;
+                      margin-top: 0px;
+                      font-family: Verdana, Geneva, Tahoma, sans-serif;
+                    "
+                  >
+                    Moderate Growth
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div id="stage-4" class="w-box w-box-34">
-          <div id="total-price-2" class="w-box w-box-33">$15000/m</div>
-          <div id="offer-price-2" class="w-box w-box-37">$15000/m</div>
+        <div id="spot-reserve-container" class="w-box w-box-25">
+          <div class="w-box w-box-41">
+            <div class="w-box w-box-42"></div>
+            <div class="w-text w-text-10">1/4 Spots remaining</div>
+            <div class="w-box w-box-43">
+              <div class="w-text">Spot reserved for</div>
+              <div class="w-box w-box-44">
+                <div id="timer" class="w-text w-text-11">00:00:00</div>
+              </div>
+            </div>
+          </div>
+          <hr class="w-separator w-separator-2" />
+        </div>
+        <div id="stage-4" class="w-box w-box-38">
+          <div id="total-price-2" class="w-box w-box-39">$15000/m</div>
+          <div id="offer-price-2" class="w-box w-box-40">$15000/m</div>
         </div>
       </div>
       <div id="pricing" class="w-box w-pricing">
-        <div class="w-text w-text-4">Plan Breakdown</div>
-        <div class="w-box w-box-8">
-          <div class="w-box w-box-9">
+        <div class="w-text w-text-1">Plan Breakdown</div>
+        <div class="w-box w-box-1">
+          <div class="w-box w-box-2">
             Social Media Managed End-End, on TikTok, X, YT Shorts, IG, FB
           </div>
-          <div id="d-1" class="w-box w-box-10">$2000/m</div>
+          <div id="d-1" class="w-box w-box-3">$2000/m</div>
         </div>
-        <div class="w-box w-box-11">
-          <div class="w-box w-box-12">
+        <div class="w-box w-box-4">
+          <div class="w-box w-box-5">
             Paid Advertising Managed End-End, All channels - Google, Meta,
             TikTok
           </div>
-          <div id="d-2" class="w-box w-box-13">$2000/m</div>
+          <div id="d-2" class="w-box w-box-6">$2000/m</div>
         </div>
-        <div class="w-box w-box-14">
-          <div class="w-box w-box-15">Influencer Marketing Managed End-End</div>
-          <div id="d-3" class="w-box w-box-16">$5000/m</div>
+        <div class="w-box w-box-7">
+          <div class="w-box w-box-8">Influencer Marketing Managed End-End</div>
+          <div id="d-3" class="w-box w-box-9">$5000/m</div>
         </div>
-        <div class="w-box w-box-17">
-          <div class="w-box w-box-18">
+        <div class="w-box w-box-10">
+          <div class="w-box w-box-11">
             Top 1% Global Marketing Talent - Graphic Designers, Video Editors,
             Writers, <br />Actors, Director, Camera man - available for your
             business
           </div>
-          <div id="d-4" class="w-box w-box-19">$15000/m</div>
+          <div id="d-4" class="w-box w-box-12">$15000/m</div>
         </div>
-        <div class="w-box w-box-20">
-          <div class="w-box w-box-21">
+        <div class="w-box w-box-13">
+          <div class="w-box w-box-14">
             Ability to close influencer deals through other influencers, saving
             you
           </div>
-          <div id="d-5" class="w-box w-box-22">$8000/m</div>
+          <div id="d-5" class="w-box w-box-15">$8000/m</div>
         </div>
-        <div class="w-box w-box-23">
-          <div class="w-box w-box-24">Access to All Influencers</div>
-          <div id="d-6" class="w-box w-box-25">$15000/m</div>
+        <div class="w-box w-box-16">
+          <div class="w-box w-box-17">Access to All Influencers</div>
+          <div id="d-6" class="w-box w-box-18">$15000/m</div>
         </div>
-        <div class="w-box w-box-26">
-          <div id="stage-2" class="w-box w-box-27">
+        <div class="w-box w-box-19">
+          <div id="stage-2" class="w-box w-box-20">
             <img
               alt=""
               width="20"
@@ -136,41 +201,50 @@
               "
               decoding="async"
               loading="lazy"
-            /><span class="w-text w-text-5"
+            /><span class="w-text w-text-2"
               >Guaranteed Growth in 30-days or</span
-            ><span class="w-text w-text-6">you do not pay</span>
+            ><span class="w-text w-text-3">you do not pay</span>
           </div>
-          <div class="w-box w-box-28">Total Price =</div>
-          <div id="total-price" class="w-box w-box-29 ms-gradient">
+          <div class="w-box w-box-21">Total Price =</div>
+          <div id="total-price" class="w-box w-box-22 ms-gradient">
             $15000/m
           </div>
         </div>
         <hr class="w-separator w-separator-1" />
-        <div id="stage-3" class="w-box w-box-30">
-          <div class="w-box w-box-35">New Price =</div>
-          <div id="offer-price" class="w-box w-box-32">$15000/m</div>
+        <div id="stage-3" class="w-box w-box-23">
+          <div class="w-box w-box-26">New Price =</div>
+          <div id="offer-price" class="w-box w-box-24">$15000/m</div>
+        </div>
+      </div>
+      <div id="popup" class="w-box w-popup">
+        <div id="requirements" class="w-box w-user-capture-div">
+          <div class="w-box w-box-28">
+            <div class="w-text w-text-5">Name</div>
+            <input
+              id="name-input"
+              class="w-text-input w-text-input-1"
+              type="text"
+            />
+          </div>
+          <div class="w-box w-box-29">
+            <div class="w-text w-text-6">Email</div>
+            <input
+              id="email-input"
+              class="w-text-input w-text-input-2"
+              type="email"
+            />
+          </div>
+          <button
+            type="button"
+            id="progression-btn-2"
+            class="w-button w-next-btn ms-gradient"
+          >
+            Next →
+          </button>
         </div>
       </div>
     </div>
-    <div class="w-html-embed w-css-embed">
-      <style>
-        button {
-          cursor: pointer;
-        }
-
-        .ms-gradient {
-          background-image: linear-gradient(
-            to right,
-            #e38b3e,
-            #bc3f29
-          ) !important;
-          color: white !important;
-          font-weight: 900 !important;
-          font-size: 16px !important;
-        }
-      </style>
-    </div>
-    <div class="w-box w-box-31">
+    <div class="w-box w-bottom-bar">
       <button
         type="button"
         id="reserve-spot-btn"
@@ -226,13 +300,13 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.BvzgEMuB.js"
+      src="/assets/entries/entry-server-routing.BLlhQawJ.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_index.BH3jV3Gk.js"
+      href="/assets/entries/pages_index.NCoP_8zZ.js"
       as="script"
       type="text/javascript"
     />
