--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.Bp7vy-e2.css"
+      href="/assets/static/app_generated_index-6937cd5a.Yg0_0ADs.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta property="og:url" content="https://url/" />
-    <title>Home</title>
-    <meta property="og:title" content="Home" />
+    <title>Sales - Home</title>
+    <meta property="og:title" content="Sales - Home" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="mSocial - Sales Pages" />
     <link
@@ -286,7 +286,7 @@
           "system": { "params": {}, "search": {}, "origin": "https://url" },
           "resources": {},
           "pageMeta": {
-            "title": "Home",
+            "title": "Sales - Home",
             "description": "!undefined",
             "excludePageFromSearch": "!undefined",
             "language": "!undefined",
@@ -300,13 +300,19 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.BLlhQawJ.js"
+      src="/assets/entries/entry-server-routing.3LlQT85V.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_index.NCoP_8zZ.js"
+      href="/assets/entries/pages_index.BCckO4gE.js"
+      as="script"
+      type="text/javascript"
+    />
+    <link
+      rel="modulepreload"
+      href="/assets/chunks/chunk-CPN_w21b.js"
       as="script"
       type="text/javascript"
     />
