--- a/index.html
+++ b/index.html
@@ -300,19 +300,19 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.3LlQT85V.js"
+      src="/assets/entries/entry-server-routing.CP0NAIr3.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_index.BCckO4gE.js"
+      href="/assets/entries/pages_index.D9jFC2MP.js"
       as="script"
       type="text/javascript"
     />
     <link
       rel="modulepreload"
-      href="/assets/chunks/chunk-CPN_w21b.js"
+      href="/assets/chunks/chunk-DtBGeldM.js"
       as="script"
       type="text/javascript"
     />
