--- a/success/index.html
+++ b/success/index.html
@@ -88,18 +88,18 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.3LlQT85V.js"
+      src="/assets/entries/entry-server-routing.CP0NAIr3.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_success.B1-kuaRQ.js"
+      href="/assets/entries/pages_success.K83UGToV.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-CPN_w21b.js"
+      href="/assets/chunks/chunk-DtBGeldM.js"
       as="script"
       type="text/javascript"
     />
