--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.Yg0_0ADs.css"
+      href="/assets/static/app_generated_index-6937cd5a.MyHBgVMz.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -48,13 +48,103 @@
         decoding="async"
         loading="lazy"
       />
-      <div class="w-box w-box-27 ms-gradient">
+      <div class="w-box w-box-47">
+        <img
+          alt=""
+          width="24"
+          height="24"
+          src="/assets/Trafic_Meeting_lM8oxHvMmWP5usuTsyGOs.png"
+          class="w-image w-icon-1"
+          sizes="100vw"
+          srcset="
+            /assets/Trafic_Meeting_lM8oxHvMmWP5usuTsyGOs.png 16w,
+            /assets/Trafic_Meeting_lM8oxHvMmWP5usuTsyGOs.png 32w,
+            /assets/Trafic_Meeting_lM8oxHvMmWP5usuTsyGOs.png 48w
+          "
+          decoding="async"
+          loading="lazy"
+        />
+        <div class="w-text w-text-14">Overview</div>
+      </div>
+      <div class="w-box w-box-27">
+        <img
+          alt=""
+          width="24"
+          height="24"
+          src="/assets/g1380_Vyl1QcHxeFnVf316qlgY6.png"
+          class="w-image w-icon"
+          sizes="100vw"
+          srcset="
+            /assets/g1380_Vyl1QcHxeFnVf316qlgY6.png 16w,
+            /assets/g1380_Vyl1QcHxeFnVf316qlgY6.png 32w,
+            /assets/g1380_Vyl1QcHxeFnVf316qlgY6.png 48w
+          "
+          decoding="async"
+          loading="lazy"
+        />
+        <div class="w-text w-text-4">Influencer Marketing</div>
+      </div>
+      <div class="w-box w-box-48">
+        <img
+          alt=""
+          width="24"
+          height="24"
+          src="/assets/ads_1_l7y89WJpkgddPgLHbYlOC.png"
+          class="w-image w-icon-2"
+          sizes="100vw"
+          srcset="
+            /assets/ads_1_l7y89WJpkgddPgLHbYlOC.png 16w,
+            /assets/ads_1_l7y89WJpkgddPgLHbYlOC.png 32w,
+            /assets/ads_1_l7y89WJpkgddPgLHbYlOC.png 48w
+          "
+          decoding="async"
+          loading="lazy"
+        />
+        <div class="w-text w-text-15">Paid Advertising</div>
+      </div>
+      <div class="w-box w-box-49">
+        <img
+          alt=""
+          width="24"
+          height="24"
+          src="/assets/social-media_1_1F172zHD3WuPGLP7zHlwf.png"
+          class="w-image w-icon-3"
+          sizes="100vw"
+          srcset="
+            /assets/social-media_1_1F172zHD3WuPGLP7zHlwf.png 16w,
+            /assets/social-media_1_1F172zHD3WuPGLP7zHlwf.png 32w,
+            /assets/social-media_1_1F172zHD3WuPGLP7zHlwf.png 48w
+          "
+          decoding="async"
+          loading="lazy"
+        />
+        <div class="w-text w-text-16">Social Media</div>
+      </div>
+      <div class="w-box w-box-50">
+        <img
+          alt=""
+          width="24"
+          height="24"
+          src="/assets/office_1_2oifvEko1L8foqHNgtoQ_.png"
+          class="w-image w-icon-4"
+          sizes="100vw"
+          srcset="
+            /assets/office_1_2oifvEko1L8foqHNgtoQ_.png 16w,
+            /assets/office_1_2oifvEko1L8foqHNgtoQ_.png 32w,
+            /assets/office_1_2oifvEko1L8foqHNgtoQ_.png 48w
+          "
+          decoding="async"
+          loading="lazy"
+        />
+        <div class="w-text w-text-17">Virtual Office</div>
+      </div>
+      <div class="w-box w-box-51 ms-gradient">
         <img
           alt=""
           width="24"
           height="24"
           src="/assets/task-actions_7Uyj53b_j4NFTdq8OEkaB.png"
-          class="w-image w-icon"
+          class="w-image w-icon-5"
           sizes="100vw"
           srcset="
             /assets/task-actions_7Uyj53b_j4NFTdq8OEkaB.png 16w,
@@ -64,7 +154,7 @@
           decoding="async"
           loading="lazy"
         />
-        <div class="w-text w-text-4">Plan</div>
+        <div class="w-text w-text-18">Plan</div>
       </div>
     </div>
     <div class="w-box w-container">
@@ -248,7 +338,7 @@
       <button
         type="button"
         id="reserve-spot-btn"
-        class="w-button w-reserve-spot-button ms-gradient"
+        class="w-button w-reserve-spot-button"
       >
         Reserve Spot</button
       ><button
@@ -300,19 +390,19 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.CP0NAIr3.js"
+      src="/assets/entries/entry-server-routing.BuOM2Di0.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_index.D9jFC2MP.js"
+      href="/assets/entries/pages_index.B0BhWiNL.js"
       as="script"
       type="text/javascript"
     />
     <link
       rel="modulepreload"
-      href="/assets/chunks/chunk-DtBGeldM.js"
+      href="/assets/chunks/chunk-DnyiLtp5.js"
       as="script"
       type="text/javascript"
     />
