--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.MyHBgVMz.css"
+      href="/assets/static/app_generated_index-6937cd5a.8drUKyiJ.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -361,6 +361,65 @@
         Next →
       </button>
     </div>
+    <div class="w-box w-top-bar">
+      <img
+        alt=""
+        width="330"
+        height="50"
+        src="/assets/Search_Bar_GcEYcx04FnNtKtJaIXxVh.png"
+        class="w-image w-image-4"
+        sizes="100vw"
+        srcset="
+          /assets/Search_Bar_GcEYcx04FnNtKtJaIXxVh.png  16w,
+          /assets/Search_Bar_GcEYcx04FnNtKtJaIXxVh.png  32w,
+          /assets/Search_Bar_GcEYcx04FnNtKtJaIXxVh.png  48w,
+          /assets/Search_Bar_GcEYcx04FnNtKtJaIXxVh.png  64w,
+          /assets/Search_Bar_GcEYcx04FnNtKtJaIXxVh.png  96w,
+          /assets/Search_Bar_GcEYcx04FnNtKtJaIXxVh.png 128w,
+          /assets/Search_Bar_GcEYcx04FnNtKtJaIXxVh.png 256w,
+          /assets/Search_Bar_GcEYcx04FnNtKtJaIXxVh.png 384w,
+          /assets/Search_Bar_GcEYcx04FnNtKtJaIXxVh.png 640w,
+          /assets/Search_Bar_GcEYcx04FnNtKtJaIXxVh.png 750w
+        "
+        decoding="async"
+        loading="lazy"
+      />
+      <div class="w-box w-profile">
+        <img
+          alt=""
+          width="24"
+          height="24"
+          src="/assets/Notification_HpohnIJAVSN-0xD43wUH0.png"
+          class="w-image w-image-3"
+          sizes="100vw"
+          srcset="
+            /assets/Notification_HpohnIJAVSN-0xD43wUH0.png 16w,
+            /assets/Notification_HpohnIJAVSN-0xD43wUH0.png 32w,
+            /assets/Notification_HpohnIJAVSN-0xD43wUH0.png 48w
+          "
+          decoding="async"
+          loading="lazy"
+        />
+        <div class="w-box w-box-52">
+          <img
+            alt=""
+            width="25"
+            height="25"
+            src="/assets/cropped-cropped-FavIcon-270x270-1-270x270_JJiSJqlBSuLrxNkGqVDa-.webp"
+            class="w-image"
+            sizes="100vw"
+            srcset="
+              /assets/cropped-cropped-FavIcon-270x270-1-270x270_JJiSJqlBSuLrxNkGqVDa-.webp 16w,
+              /assets/cropped-cropped-FavIcon-270x270-1-270x270_JJiSJqlBSuLrxNkGqVDa-.webp 32w,
+              /assets/cropped-cropped-FavIcon-270x270-1-270x270_JJiSJqlBSuLrxNkGqVDa-.webp 48w,
+              /assets/cropped-cropped-FavIcon-270x270-1-270x270_JJiSJqlBSuLrxNkGqVDa-.webp 64w
+            "
+            decoding="async"
+            loading="lazy"
+          />
+        </div>
+      </div>
+    </div>
     <script id="vike_pageContext" type="application/json">
       {
         "abortReason": "!undefined",
@@ -390,19 +449,19 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.BuOM2Di0.js"
+      src="/assets/entries/entry-server-routing.yKpceZB6.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_index.B0BhWiNL.js"
+      href="/assets/entries/pages_index.I0f3y8jo.js"
       as="script"
       type="text/javascript"
     />
     <link
       rel="modulepreload"
-      href="/assets/chunks/chunk-DnyiLtp5.js"
+      href="/assets/chunks/chunk-c5XTv5yi.js"
       as="script"
       type="text/javascript"
     />
