updates in client view

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.8drUKyiJ.css"
+      href="/assets/static/app_generated_index-6937cd5a.CbChrIfS.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -48,7 +48,7 @@
         decoding="async"
         loading="lazy"
       />
-      <div class="w-box w-box-47">
+      <div class="w-box w-box-47 hide">
         <img
           alt=""
           width="24"
@@ -66,7 +66,7 @@
         />
         <div class="w-text w-text-14">Overview</div>
       </div>
-      <div class="w-box w-box-27">
+      <div class="w-box w-box-27 hide">
         <img
           alt=""
           width="24"
@@ -84,7 +84,7 @@
         />
         <div class="w-text w-text-4">Influencer Marketing</div>
       </div>
-      <div class="w-box w-box-48">
+      <div class="w-box w-box-48 hide">
         <img
           alt=""
           width="24"
@@ -102,7 +102,7 @@
         />
         <div class="w-text w-text-15">Paid Advertising</div>
       </div>
-      <div class="w-box w-box-49">
+      <div class="w-box w-box-49 hide">
         <img
           alt=""
           width="24"
@@ -120,7 +120,7 @@
         />
         <div class="w-text w-text-16">Social Media</div>
       </div>
-      <div class="w-box w-box-50">
+      <div class="w-box w-box-50 hide">
         <img
           alt=""
           width="24"
@@ -361,13 +361,13 @@
         Next →
       </button>
     </div>
-    <div class="w-box w-top-bar">
+    <div class="w-box w-top-bar hide">
       <img
         alt=""
         width="330"
         height="50"
         src="/assets/Search_Bar_GcEYcx04FnNtKtJaIXxVh.png"
-        class="w-image w-image-4"
+        class="w-image w-image-4 hide"
         sizes="100vw"
         srcset="
           /assets/Search_Bar_GcEYcx04FnNtKtJaIXxVh.png  16w,
@@ -390,7 +390,7 @@
           width="24"
           height="24"
           src="/assets/Notification_HpohnIJAVSN-0xD43wUH0.png"
-          class="w-image w-image-3"
+          class="w-image w-image-3 hide"
           sizes="100vw"
           srcset="
             /assets/Notification_HpohnIJAVSN-0xD43wUH0.png 16w,
@@ -400,7 +400,7 @@
           decoding="async"
           loading="lazy"
         />
-        <div class="w-box w-box-52">
+        <div class="w-box w-box-52 hide">
           <img
             alt=""
             width="25"
@@ -449,19 +449,19 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.yKpceZB6.js"
+      src="/assets/entries/entry-server-routing.CxM4247j.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_index.I0f3y8jo.js"
+      href="/assets/entries/pages_index.C36jCFTA.js"
       as="script"
       type="text/javascript"
     />
     <link
       rel="modulepreload"
-      href="/assets/chunks/chunk-c5XTv5yi.js"
+      href="/assets/chunks/chunk-CunDJwk1.js"
       as="script"
       type="text/javascript"
     />
