--- a/success/index.html
+++ b/success/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.8drUKyiJ.css"
+      href="/assets/static/app_generated_index-6937cd5a.CbChrIfS.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -88,18 +88,18 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.yKpceZB6.js"
+      src="/assets/entries/entry-server-routing.CxM4247j.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_success.DIA2oFLm.js"
+      href="/assets/entries/pages_success.C582aM0W.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-c5XTv5yi.js"
+      href="/assets/chunks/chunk-CunDJwk1.js"
       as="script"
       type="text/javascript"
     />
