updates to success page

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.CxM4247j.js"
+      src="/assets/entries/entry-server-routing.Dw3Zy0_O.js"
       type="module"
       async
     ></script>
