--- a/success/index.html
+++ b/success/index.html
@@ -53,10 +53,13 @@
       </div>
       <div class="w-text w-text-12">Payment Successful 🎉</div>
       <div class="w-text w-text-13">
-        We will reach you shortly regarding next steps 👍
+        Credentials to access mSocial platform has been shared to your email 👍
       </div>
-      <a href="https://msocial.gg/" target="_self" class="w-link w-link-1"
-        >msocial.gg 🔗</a
+      <a
+        href="https://portal.msocialverse.com/"
+        target="_self"
+        class="w-link w-link-1"
+        >mSocial Platform 🔗</a
       >
     </div>
     <script id="vike_pageContext" type="application/json">
@@ -88,13 +91,13 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.CxM4247j.js"
+      src="/assets/entries/entry-server-routing.Dw3Zy0_O.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_success.C582aM0W.js"
+      href="/assets/entries/pages_success.Bw7NlRkb.js"
       as="script"
       type="text/javascript"
     /><link
